# fast_start_python

./: .gitignore  LICENSE  README.md  bench_startup.py  cache.py  fspython.py  make-sample-root.sh  pyproject.toml  run-tests.sh  start-fspython.sh  stop-fspython.sh
docs/: how_to_use_cache.md  multiuser_use_case.md  plan_for_cache.md
examples/: cache_slow_query.py  compute_pandas.py  compute_regression.py  plotly_save_html.py  plotly_save_png.py  print_args.py  pyplot_save_png.py  sample_ds.py  show_plot.py
tests/: harness.py  test_cache.py  test_cache_fspython.py  test_cache_sequences.py  test_fspython_integration.py
tests/cache_fixtures/append_only/: v1_basic.py  v2_with_extra_at_bottom.py
tests/cache_fixtures/callee_changed/: v1_script.py  v2_script.py
tests/cache_fixtures/decorated_changed/: v1_script.py  v2_script.py
tests/cache_fixtures/fspython_basic/: script.py
tests/cache_fixtures/import_after_call/: script.py  v1_depmod.py  v2_depmod.py
tests/cache_fixtures/same_folder_import/: script.py  v1_depmod.py  v2_depmod.py
tests/cache_fixtures/unrelated_callee/: v1_script.py  v2_script.py
