[project]
name = "fast-start-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaleido",
    "matplotlib",
    "numpy",
    "openpyxl",
    "pandas",
    "plotly",
    "polars",
    "requests",
    "scikit-learn",
    "scipy",
    "seaborn",
    "sqlalchemy",
    "statsmodels",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cache", "fspython"]
